css/index.sass
@font-face
  font-family: nicoca
  src: url('../font/nicoca_v1_subset.woff') format("woff")

body
  width: 100vw
  overflow-x: hidden
  margin: 0
  color: white
  font-family: nicoca

*
  margin: 0

.clearfix::after
  content: ""
  display: block
  clear: both

$risa-color: #ff4cd2
$bg-stripe-light: darken($risa-color, 30%)
$bg-stripe-dark: darken($bg-stripe-light, 15%)
$bg-stripe-width: 20px
$bg-dot-color: black
$bg-dot-size: 6px
$bg-dot-space: $bg-stripe-width
.background
  position: fixed
  z-index: -9999
  width: 100%
  height: 100vh
  margin: 0
  padding: 0
  background: repeating-linear-gradient($bg-stripe-dark, $bg-stripe-dark $bg-stripe-width, $bg-stripe-light $bg-stripe-width, $bg-stripe-light $bg-stripe-width*2)

  .page
    z-index: -8990
    height: 100%
    margin: 0 auto
    position: absolute
    top: 0
    bottom: 0
    left: 0
    right: 0
    max-width: 750px
    background-size: contain
    background-position: center
    background-repeat: no-repeat

  .cover
    z-index: -9000
    width: 100%
    height: 100%
    top: 0
    left: 0
    position: absolute
    background-image: radial-gradient($bg-dot-color $bg-dot-size, transparent $bg-dot-size+1px), radial-gradient($bg-dot-color $bg-dot-size, transparent $bg-dot-size+1px)
    background-size: $bg-dot-space*2 $bg-dot-space*2
    background-position: $bg-dot-space $bg-dot-space, $bg-dot-space*2 $bg-dot-space*2

.scroll-button
  position: absolute
  bottom: 50%
  left: 50%
  display: inline-block
  transform: translate(0, 50%)
  text-decoration: none
  color: white

  $scroll-button-size: 50px
  $scroll-button-thickness: 2px
  $scroll-button-animation-duration: 2s

  span
    position: absolute
    top: 0
    left: 50%
    width: $scroll-button-size
    height: $scroll-button-size
    margin-left: -$scroll-button-size/2
    border-left: $scroll-button-thickness solid white
    border-bottom: $scroll-button-thickness solid white
    transform: rotate(-45deg)
    animation: sdb $scroll-button-animation-duration infinite
    box-sizing: border-box

    $scroll-button-arrow-space: $scroll-button-size
    $scroll-button-arrow-delay: $scroll-button-animation-duration * 0.08
    @for $i from 1 through 5
      &:nth-of-type(#{$i})
        top: calc(#{$scroll-button-arrow-space} * (#{$i} - 1))
        animation-delay: calc(#{$scroll-button-arrow-delay} * (#{$i} - 1))

  @keyframes sdb
    0%
      transform: rotate(-45deg) translate(0, 0)
      opacity: 0
    50%
      opacity: 1
    100%
      transform: rotate(-45deg) translate(-20px, 20px)
      opacity: 0


$content-width: 100vh / 16 * 9
.contents
  width: 100vh*9/16
  margin: 0 auto

  .first
    width: 100%
    height: 100vh
    .scroll-button
      padding-top: 350px

  h1
    text-align: center

  .content-body
    background: rgba(0, 0, 0, 0.5)
    font-size: 2.5vh
    overflow: hidden;
    h2
      text-align: center
      font-size: 6vh
    h3
      font-size: 3.5vh
    .box
      width: $content-width*0.8
      .unit-image
        text-align: justify
        img
          width: 14vh
      .unit-image-4
        img
          margin-right: -5vh
      .unit-image-5
        img
          margin-right: -7vh

    .momo-pear-berry
      background: rgba(255, 100, 100, 0.4)
    .sexy-panthers
      background: rgba(255, 200, 0, 0.4)
    .rough-and-fears
      background: rgba(100, 0, 200, 0.4)
    .oubutai
      background: rgba(255, 200, 200, 0.6)
    .melt-choco-pot
      background: rgba(127, 74, 17, 0.4)
    .sing-my-way
      background: rgba(0, 0, 100, 0.4)

    .left
      float: left
    .right
      float: right

    .spacer
      height: 5vh
      width: $content-width
      float: left

    .beat-shooter
      width: $content-width
      float: left
      background: rgba(0, 150, 255, 0.5)
      h3
        text-align: center
      .unit-image
        text-align: center
        img
          width: 16vh

  .mid-scroll
    width: $content-width
    height: 80px
    position: relative
    .scroll-button
      padding-top: 120px

  .plan
    h3
      text-align: center

  .last
    height: 100vh
    position: relative
    font-size: 3vh
    footer
      background: rgba($risa-color, 0.6)
      position: absolute
      bottom: 0
      margin-bottom: 0
      text-align: center

